tests/extended/invalid/simple/RealDiv_CompileFail_1.whiley
void System::main([string] args):
    ls = [1,2,3]
    x = 2.0 / 1
    print str(ls[x])
